{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "9ca2c426-c604-42d2-88b9-29b245b73de5",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "07b3ef06-c427-4272-8e64-a2cd616c318a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "9a00e63a-ebab-4f81-80d7-f6695aa13beb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootCancel",
                    "type": "Button",
                    "id": "e8141893-7612-4c52-9d1d-9e5286866127",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "22603456-5f38-4f29-83eb-7c254e0e79ce",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0712893d-1cd6-4669-9b7e-3152dda018d0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "81ff8bcb-789f-4dab-8039-8e46939020ce",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "41016d05-b33e-4189-81a0-d39f930692d1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8bab1d62-6f74-4a3a-92dc-46a3a1783b92",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "33127e72-fb09-4c2b-8965-e499b06a1c1a",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90a6a573-0bec-497d-8231-fd370f4b0bbc",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ShootCancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "User",
            "id": "9271faee-48a9-4280-ba88-f3787b405197",
            "actions": [
                {
                    "name": "MouseDown",
                    "type": "Value",
                    "id": "aa1a8c71-6929-40f5-970d-94dd14fc65f2",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "661e98a1-64ec-4837-8e2c-9d0683948fa3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "572eec10-16a7-487e-8f20-e6dca147f075",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MouseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39d86b31-de1d-4c80-92f6-e6fc14e69393",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}